# SimpleVRP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  clean.bat  config.h  data.cu  main.cc  main.cu  run.bat  solver.cc  solver.cu  solver.h
algorithm/: common_tools.h  config.h  solver.cc  solver.h
algorithm/initial_solution/: initial_solution.cc
algorithm/local_search/: local_search.cc  local_search.h  metaheuristic.h  tools.cc
algorithm/parameter/: parameter.cc  parameter.h
api/: api_config.h  osrm_request.cc  osrm_request.h
dao/: destination.h  solution.h  vehicle.h
data/: data.cc  data.h
initial_solution/: initial_solution.cc  initial_solution.h
local_search/: local_search.cc  local_search.h
server/: README.md  server.py
solver/: common_tools.h  config.h  utilities.h
solver/algorithm/: config.h  solver.cc  solver.h
solver/algorithm/initial_solution/: initial_solution.cc  initial_solution.h  tools.cc
solver/algorithm/local_search/: README.md  local_search.cc  local_search.h  metaheuristic.h  tools.cc
solver/algorithm/parameter/: parameter.cc  parameter.h
solver/dao/: destination.h  route.h  solution.h  vehicle.h
solver/wrapper/: wrapper.cc  wrapper.h
test/: main.cc  test.json
viewer/: navigation.js  style.css  viewer.html
wrapper/: wrapper.cc  wrapper.h
